--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -40,6 +40,11 @@ option(IVW_USE_EXTERNAL_GTEST "GTest is provided externaly" OFF)
  # don't install, used in build only
 if(NOT IVW_USE_EXTERNAL_GTEST AND (IVW_TEST_UNIT_TESTS OR IVW_TEST_INTEGRATION_TESTS))
 	add_subdirectory(gtest)
+	ivw_register_license_file(NAME "Google C++ Testing Framework" TARGET gtest MODULE Core EXT
+        URL "https://github.com/google/googletest"
+        TYPE "BSD 3-clause"
+        FILES ${IVW_EXTENSIONS_DIR}/gtest/gtest/LICENSE
+    )
 else()
 	find_package(GTest CONFIG REQUIRED)
 endif()
@@ -81,6 +86,11 @@ endif()
 
 # Flags
 add_subdirectory(flags) # We have local modifications
+ivw_register_license_file(NAME "Flags" MODULE Core EXT
+    URL "http://grisumbras.github.io/enum-flags/"
+    TYPE "The MIT License"
+    FILES ${IVW_EXTENSIONS_DIR}/flags/LICENSE
+)
 
 # GLM
 option(IVW_USE_EXTERNAL_GLM "GLM is provided externaly" OFF)
@@ -96,6 +106,11 @@ else()
 endif()
 
 add_subdirectory(ticpp)
+ivw_register_license_file(NAME "TiCPP" TARGET ticpp MODULE Core EXT
+    URL https://github.com/wxFormBuilder/ticpp
+    TYPE "The MIT License"
+    FILES ${IVW_EXTENSIONS_DIR}/ticpp/LICENSE
+)
 
 # benchmark
 option(IVW_TEST_BENCHMARKS "Generate benchmark targets" OFF)
@@ -110,10 +125,65 @@ if(IVW_TEST_BENCHMARKS)
 endif()
 
 add_subdirectory(warn)     # No package available
+ivw_register_license_file(NAME "warn" MODULE Core EXT
+    URL "https://github.com/petersteneteg/warn"
+    TYPE "BSD 2-clause"
+    FILES ${IVW_TOOLS_DIR}/codegen/warn/warn/LICENSE
+)
+
+# tclap
 add_subdirectory(tclap)    
-add_subdirectory(tinydir)
+ivw_register_license_file(NAME "tclap" TARGET tclap_dummy MODULE Core EXT
+    URL http://tclap.sourceforge.net/
+    TYPE "The MIT License"
+    FILES ${IVW_EXTENSIONS_DIR}/tclap/COPYING
+)
+
+# tinydir
+option(IVW_USE_EXTERNAL_TINYDIR "Tinydir is provided externaly" OFF)
+if(NOT IVW_USE_EXTERNAL_TINYDIR)
+	add_subdirectory(tinydir)
+	ivw_register_license_file(NAME "TinyDir" MODULE Core EXT
+    	URL https://github.com/cxong/tinydir
+    	TYPE "Simplified BSD"
+    	FILES ${IVW_EXTENSIONS_DIR}/tinydir/COPYING
+	)
+else()
+	ivw_vcpkg_paths(INCLUDE vcpkgInclude)
+	find_path(TINYDIR_INCLUDE_DIR NAMES tinydir.h HINTS ${vcpkgInclude} REQUIRED)
+	add_library(tinydir INTERFACE)
+	add_library(inviwo::tinydir ALIAS tinydir)
+	target_include_directories(tinydir INTERFACE $<BUILD_INTERFACE:${TINYDIR_INCLUDE_DIR}>)
+	ivw_vcpkg_install(tinydir MODULE Core EXT)
+	ivw_register_package(tinydir tinydir)
+endif()
+
+# Half
 add_subdirectory(half)
-add_subdirectory(utf)
+ivw_register_license_file(NAME "half" TARGET half MODULE Core EXT
+    URL "http://half.sourceforge.net"
+    TYPE "The MIT License"
+    FILES ${IVW_EXTENSIONS_DIR}/half/LICENSE.txt
+)
+
+# utfcpp
+option(IVW_USE_EXTERNAL_UTFCPP "UTFCPP is provided externaly" OFF)
+if(NOT IVW_USE_EXTERNAL_UTFCPP)
+	add_subdirectory(utf)
+	ivw_register_license_file(NAME "UTF8-CPP" TARGET utfcpp MODULE Core EXT
+	    URL "https://github.com/nemtrif/utfcpp"
+	    TYPE "Boost Software License"
+	    FILES ${IVW_EXTENSIONS_DIR}/utf/LICENSE
+	)
+else()
+	ivw_vcpkg_paths(INCLUDE vcpkgInclude)
+	find_path(UTFCPP_INCLUDE_DIR NAMES utf8.h utf8/core.h HINTS ${vcpkgInclude} REQUIRED)
+	add_library(utf8cpp INTERFACE)
+	add_library(utf8::cpp ALIAS utf8cpp)
+	target_include_directories(utf8cpp INTERFACE $<BUILD_INTERFACE:${UTFCPP_INCLUDE_DIR}>)
+	ivw_vcpkg_install(utfcpp MODULE Core EXT)
+	ivw_register_package(utfcpp utf8cpp)
+endif()
 
 # nlohmann json
 option(IVW_USE_EXTERNAL_JSON "JSON is provided externaly" OFF)
@@ -144,14 +214,66 @@ else()
 	ivw_vcpkg_install(fmt MODULE Core EXT)
 endif()
 
+# span
 add_subdirectory(span)
+ivw_register_license_file(NAME "tcbrindle/span" target inviwo::span MODULE Core EXT
+    URL "https://github.com/tcbrindle/span"
+    TYPE " Boost Software License"
+    FILES ${IVW_EXTENSIONS_DIR}/span/span/LICENSE_1_0.txt
+)
+
+# sml
 add_subdirectory(sml)
+ivw_register_license_file(NAME "[Boost].SML" VERSION 1.1.0 target inviwo::sml MODULE Core EXT
+    URL "https://github.com/boost-experimental/sml"
+    TYPE " Boost Software License"
+    FILES ${IVW_EXTENSIONS_DIR}/sml/LICENSE_1_0.txt
+)
 
 # Sigar
 option(IVW_USE_SIGAR "Use sigar to detect system capabilities" ON)
 if(IVW_USE_SIGAR)
 	add_subdirectory(sigar)
+    ivw_register_license_file(NAME "Sigar" TARGET inviwo::sigar MODULE Core EXT
+        URL "http://sigar.hyperic.com"
+        TYPE "Apache License"
+        FILES ${IVW_EXTENSIONS_DIR}/sigar/LICENSE
+    )
 endif()
 
-# Stackwalker for windows for stack traces in the log
-add_subdirectory(stackwalker) 
+if(WIN32) # Stackwalker for windows for stack traces in the log
+	add_subdirectory(stackwalker) 
+    ivw_register_license_file(NAME "stackwalker" TARGET inviwo::stackwalker MODULE Core EXT
+        URL http://stackwalker.codeplex.com/
+        TYPE "BSD-License"
+        FILES ${IVW_EXTENSIONS_DIR}/stackwalker/LICENSE.txt
+    )
+endif()
+
+if(WIN32 AND MSVC)
+    option(IVW_CFG_MSVC_MEMLEAK_TEST "Run memoryleak test within Visual Studio" OFF)
+    if(IVW_CFG_MSVC_MEMLEAK_TEST)
+        add_subdirectory(vld)
+    	ivw_register_license_file(NAME "Visual Leak Detector (VLD)" VERSION 2.5.1 MODULE Core EXT
+        	URL "https://kinddragon.github.io/vld/"
+        	TYPE "GNU LESSER GENERAL PUBLIC LICENSE"
+        	FILES ${IVW_EXTENSIONS_DIR}/vld/COPYING.txt
+    	)
+    endif()
+endif()
+
+if(PYTHONLIBS_FOUND)
+	option(IVW_USE_EXTERNAL_PYBIND11 "Pybind11 is provided externaly" OFF)
+	if(NOT IVW_USE_EXTERNAL_PYBIND11)
+    	add_subdirectory(pybind11)
+	    ivw_register_license_file(NAME "PyBind11" VERSION 2.2.4 MODULE Core EXT
+		    URL "https://github.com/pybind/pybind11"
+		    TYPE "BSD-style"
+		    FILES ${IVW_EXTENSIONS_DIR}/pybind11/LICENSE
+		)
+		ivw_register_package(pybind11 pybind11::embed)
+	else()
+		find_package(pybind11 CONFIG REQUIRED)
+		ivw_vcpkg_install(pybind11 COPYRIGHT copyright/LICENSE MODULE Core EXT)
+	endif()
+endif()
