--- a/tests/integrationtests/CMakeLists.txt
+++ b/tests/integrationtests/CMakeLists.txt
@@ -26,7 +26,7 @@ endforeach()
 # Create application
 add_executable(inviwo-integrationtests ${SOURCE_FILES})
 
-find_package(GTest REQUIRED)
+find_package(GTest CONFIG REQUIRED)
 target_link_libraries(inviwo-integrationtests PRIVATE 
     inviwo::core
     inviwo::module::glfw
