--- a/ext/CMakeLists.txt
+++ b/ext/CMakeLists.txt
@@ -77,7 +77,7 @@ else()
 	find_package(ZLIB REQUIRED)
 	find_package(JPEG REQUIRED)
 	find_package(TIFF REQUIRED)
-	find_package(PNG REQUIRED)
+	find_package(libpng CONFIG REQUIRED)
 	ivw_vcpkg_install(zlib          MODULE Core EXT)
 	ivw_vcpkg_install(libjpeg-turbo MODULE Core EXT)
 	ivw_vcpkg_install(tiff          MODULE Core EXT)
@@ -101,7 +101,7 @@ if(NOT IVW_USE_EXTERNAL_GLM)
 	    TYPE "The MIT License" FILES ${IVW_EXTENSIONS_DIR}/glm/LICENSE
 	)
 else()	
-	find_package(glm REQUIRED)
+	find_package(glm CONFIG REQUIRED)
 	ivw_vcpkg_install(glm MODULE Core EXT)
 endif()
 
@@ -120,7 +120,7 @@ if(IVW_TEST_BENCHMARKS)
 	if(NOT IVW_USE_EXTERNAL_BENCHMARK)
 		add_subdirectory(benchmark)
 	else()
-		find_package(benchmark REQUIRED)
+		find_package(benchmark CONFIG REQUIRED)
 	endif()
 endif()
 
@@ -195,7 +195,7 @@ if(NOT IVW_USE_EXTERNAL_JSON)
 		FILES  ${IVW_EXTENSIONS_DIR}/json/LICENSE.MIT
 	)
 else()
-	find_package(nlohmann_json REQUIRED)
+	find_package(nlohmann_json CONFIG REQUIRED)
 	ivw_vcpkg_install(nlohmann-json MODULE Core EXT)
 endif()
 
@@ -210,7 +210,7 @@ if(NOT IVW_USE_EXTERNAL_FMT)
 	)
 	ivw_default_install_targets(fmt)
 else()
-	find_package(fmt REQUIRED)
+	find_package(fmt CONFIG REQUIRED)
 	ivw_vcpkg_install(fmt MODULE Core EXT)
 endif()
 
