QtWidget: Moveing TFPropertyConcept, minor refactoring

--- a/modules/qtwidgets/CMakeLists.txt
+++ b/modules/qtwidgets/CMakeLists.txt
@@ -92,6 +92,7 @@ set(HEADER_FILES
     include/modules/qtwidgets/tf/tfeditorisovalue.h
     include/modules/qtwidgets/tf/tfeditorprimitive.h
     include/modules/qtwidgets/tf/tfeditorview.h
+    include/modules/qtwidgets/tf/tfpropertyconcept.h
     include/modules/qtwidgets/tf/tfpropertydialog.h
     include/modules/qtwidgets/tf/tfutils.h
 )
@@ -174,6 +175,7 @@ set(SOURCE_FILES
     src/tf/tfeditorprimitive.cpp
     src/tf/tfeditorview.cpp
     src/tf/tflineedit.cpp
+    src/tf/tfpropertyconcept.cpp
     src/tf/tfpropertydialog.cpp
     src/tf/tfselectionwatcher.cpp
     src/tf/tfutils.cpp
