--- a/ext/flags/CMakeLists.txt
+++ b/ext/flags/CMakeLists.txt
@@ -2,22 +2,18 @@
 # http://stackoverflow.com/a/29214327/3214598
 
 set(HEADER_FILES 
-    ${IVW_EXTENSIONS_DIR}/flags/allow_flags.h
-    ${IVW_EXTENSIONS_DIR}/flags/flags.h
-    ${IVW_EXTENSIONS_DIR}/flags/flagsfwd.h
-    ${IVW_EXTENSIONS_DIR}/flags/iterator.h
+    include/flags/allow_flags.h
+    include/flags/flags.h
+    include/flags/flagsfwd.h
+    include/flags/iterator.h
 )
 ivw_group("Header Files" ${HEADER_FILES})
 source_group("CMake Files" FILES ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt)
 
-#add_library(moduleA INTERFACE) # 'moduleA' is an INTERFACE pseudo target
-
-# From here, the target 'moduleA' can be customised
-#target_include_directories(moduleA ...) # Transitively forwarded
-#install(TARGETS moduleA ...)
+add_library(flags INTERFACE)
+target_include_directories(flags INTERFACE include)
+add_library(inviwo::flags ALIAS flags)
 
 #  HACK: have the files showing in the IDE, under the name 'flags'
-add_custom_target(flags SOURCES ${HEADER_FILES})
-
-# Creates VS folder structure
-ivw_folder(flags ext)
+add_custom_target(flags_dummy SOURCES ${HEADER_FILES})
+ivw_folder(flags_dummy ext)
