--- a/ext/libpng/CMakeLists.txt
+++ b/ext/libpng/CMakeLists.txt
@@ -10,7 +10,9 @@ ivw_group("Source Files" ${SOURCE_FILES} )
 
 # Create library
 add_library(png ${SOURCE_FILES} ${HEADER_FILES})
+add_library(PNG::PNG ALIAS png)
 set_target_properties(png PROPERTIES VERSION 1.5.13 SOVERSION 1.5)
+
 
 # Define definitions for build on windows
 if(BUILD_SHARED_LIBS AND WIN32)
@@ -25,7 +27,7 @@ target_include_directories(png INTERFACE
 )
 
 # png depends on zlib
-find_package(ZLIB REQUIRED)
+find_package(ZLIB CONFIG REQUIRED)
 target_link_libraries(png PRIVATE ZLIB::ZLIB)
 
 # Inviwo Settings
@@ -33,4 +35,4 @@ ivw_suppress_compiler_warnings(png)
 ivw_default_install_targets(png)
 ivw_folder(png ext)
 source_group("CMake Files" FILES ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt)
-ivw_make_package(libpng png) # Make package (for other projects to find)
+ivw_make_package(PNG png) # Make package (for other projects to find)
