--- a/ext/stackwalker/CMakeLists.txt
+++ b/ext/stackwalker/CMakeLists.txt
@@ -1,37 +1,24 @@
-#--------------------------------------------------------------------
-# stackwalker Package
 project(stackwalker)
-#--------------------------------------------------------------------
-
-#--------------------------------------------------------------------
-# Add header files
 set(HEADER_FILES
-    ${IVW_EXTENSIONS_DIR}/stackwalker/stackwalker.h
+    include/stackwalker/stackwalker.h
 )
 ivw_group("Header Files" ${HEADER_FILES})
 
-#--------------------------------------------------------------------
-# Add source files
 set(SOURCE_FILES
-    ${IVW_EXTENSIONS_DIR}/stackwalker/stackwalker.cpp
+    src/stackwalker.cpp
 )
 ivw_group("Source Files" ${SOURCE_FILES})
 
-#--------------------------------------------------------------------
 # Create library
 add_library(stackwalker ${SOURCE_FILES} ${HEADER_FILES})
 add_library(inviwo::stackwalker ALIAS stackwalker)
 set_target_properties(stackwalker PROPERTIES VERSION 14.0.0 SOVERSION 14.0)
+target_include_directories(stackwalker PUBLIC include PRIVATE include/stackwalker)
 
-#--------------------------------------------------------------------
-# Define defintions
 ivw_define_standard_definitions(stackwalker stackwalker)
 
-#--------------------------------------------------------------------
-# Creates VS folder structure
 ivw_folder(stackwalker ext)
 
-#--------------------------------------------------------------------
 # Make package (for other projects to find)
 ivw_default_install_targets(stackwalker)
 ivw_make_package(stackwalker stackwalker)
