--- a/ext/tiff/CMakeLists.txt
+++ b/ext/tiff/CMakeLists.txt
@@ -529,7 +529,7 @@ set(MDI_SUPPORT ON)
 # Inviwo: Hide option, always use ZLIB::ZLIB since it is built in inviwo
 #option(zlib "use zlib (required for Deflate compression)" ON)
 #if (zlib)
-  find_package(ZLIB)
+  find_package(ZLIB CONFIG)
 #endif()
 set(ZLIB_SUPPORT 0)
 if(ZLIB_FOUND)
@@ -552,7 +552,7 @@ set(ZIP_SUPPORT ${ZLIB_SUPPORT})
 # Inviwo: Hide option, always use inviwo::libjpeg since it is built in inviwo
 #option(jpeg "use libjpeg (required for JPEG compression)" ON)
 #if (jpeg)
-   find_package(JPEG)
+   find_package(JPEG CONFIG)
 #endif()
 #set(JPEG_SUPPORT FALSE)
 if(JPEG_FOUND)
