--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -61,6 +61,7 @@ verify_submodules("${CMAKE_CURRENT_LIST_DIR}/.gitmodules")
 
 option(BUILD_SHARED_LIBS "Build shared libs, else static libs" ON)
 
+set(CMAKE_FIND_PACKAGE_PREFER_CONFIG ON)
 file(REMOVE_RECURSE ${CMAKE_BINARY_DIR}/pkg)
 list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_LIST_DIR}/cmake/modules)
 
