--- a/modules/png/CMakeLists.txt
+++ b/modules/png/CMakeLists.txt
@@ -28,5 +28,5 @@ ivw_add_unittest(${TEST_FILES})
 # Create module
 ivw_create_module(${SOURCE_FILES} ${HEADER_FILES})
 
-find_package(libpng CONFIG REQUIRED)
+find_package(PNG REQUIRED)
 target_link_libraries(inviwo-module-png PRIVATE png)
