--- a/modules/python3/bindings/CMakeLists.txt
+++ b/modules/python3/bindings/CMakeLists.txt
@@ -1,4 +1,3 @@
-#--------------------------------------------------------------------
 # Create python module
 set(HEADER_FILES
     include/inviwopy/inviwopy.h
@@ -58,4 +57,4 @@ ivw_add_py_wrapper(inviwopy ${SOURCE_FILES} ${HEADER_FILES})
 target_link_libraries(inviwopy PUBLIC inviwo::core inviwo::module::python3)
 target_include_directories(inviwopy PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
-ivw_default_install_comp_targets(python inviwopy)
+ivw_default_install_targets(inviwopy)
