--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -739,7 +739,6 @@ target_compile_definitions(inviwo-core PRIVATE
 target_include_directories(inviwo-core PUBLIC
     $<BUILD_INTERFACE:${CMAKE_CURRENT_BINARY_DIR}/include>
     $<BUILD_INTERFACE:${IVW_INCLUDE_DIR}>
-    $<BUILD_INTERFACE:${IVW_EXTENSIONS_DIR}> #Should we use this one?!?"
 )
 
 # Add core dependencies to this list
@@ -761,6 +760,8 @@ target_link_libraries(inviwo-core
         inviwo::warn
         inviwo::sml
         inviwo::span
+        inviwo::half
+        inviwo::flags
         fmt::fmt
         $<$<BOOL:${IVW_OPENMP_ON}>:OpenMP::OpenMP_CXX>
     PRIVATE
@@ -795,11 +796,11 @@ ivw_register_license_file(NAME "Inviwo" MODULE Core
     TYPE "The MIT License"
     FILES ${IVW_ROOT_DIR}/LICENSE
 )
-get_property(core_license_list TARGET inviwo-core PROPERTY IVW_LICENSE_LIST)
-get_property(ext_license_list DIRECTORY ${IVW_ROOT_DIR}/ext PROPERTY IVW_LICENSE_LIST)
-get_property(meta_license_list DIRECTORY ${IVW_TOOLS_DIR}/meta PROPERTY IVW_LICENSE_LIST)
+get_property(core_license_list TARGET inviwo-core PROPERTY IVW_LICENCE_LIST)
+get_property(ext_license_list DIRECTORY ${IVW_ROOT_DIR}/ext PROPERTY IVW_LICENCE_LIST)
+get_property(meta_license_list DIRECTORY ${IVW_TOOLS_DIR}/meta PROPERTY IVW_LICENCE_LIST)
 list(APPEND core_license_list ${ext_license_list} ${meta_license_list})
-set_property(TARGET inviwo-core PROPERTY IVW_LICENSE_LIST ${core_license_list})
+set_property(TARGET inviwo-core PROPERTY IVW_LICENCE_LIST ${core_license_list})
 
 #----------------------------------------------------------------
 # Generate build info - the build info will be updated during every compilation
