--- a/modules/base/CMakeLists.txt
+++ b/modules/base/CMakeLists.txt
@@ -262,3 +262,7 @@ ivw_create_module(${SOURCE_FILES} ${MOC_FILES} ${HEADER_FILES})
 if(IVW_TEST_BENCHMARKS)
     add_subdirectory(tests/benchmarks)
 endif()
+
+if(IVW_MODULE_PYTHON3)
+    add_subdirectory(bindings)
+endif()
