--- a/ext/utf/CMakeLists.txt
+++ b/ext/utf/CMakeLists.txt
@@ -18,12 +18,9 @@ ivw_group("Header Files" ${HEADER_FILES})
 source_group("CMake Files" FILES ${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt)
 source_group("" FILES ${DOC_FILES})
 
-#  HACK: have the files showing in the IDE, under the name 'utfcpp'
-add_custom_target(utfcpp SOURCES ${HEADER_FILES} ${DOC_FILES})
-set_target_properties(utfcpp PROPERTIES VERSION 3.1.0 SOVERSION 3.1)
+#  HACK: have the files showing in the IDE, under the name 'utfcpp_dummy'
+add_custom_target(utfcpp_dummy SOURCES ${HEADER_FILES} ${DOC_FILES})
+ivw_folder(utfcpp_dummy ext)
 
-# Creates VS folder structure
-ivw_folder(utfcpp ext)
-
-#ivw_default_install_targets(utf8cpp)
+ivw_default_install_targets(utf8cpp)
 ivw_register_package(utfcpp utf8cpp)
